# Datamine

./: .editorconfig  .gitignore  .pkgmeta  CHANGELOG.md  GENERATING_MAP_DATA.md  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
Datamine/: Bindings.xml  Datamine.lua  Datamine.toc  DatamineEarlyLoad.lua  DataminePostLoad.lua
Datamine/Core/: CallbackRegistry.lua  Console.lua  Events.lua  Links.lua  Locale.lua  Search.lua  SlashCommands.lua  StyleUtil.lua  TableUtil.lua
Datamine/Localization/: enUS.lua  ruRU.lua
Datamine/Modules/: AchievementInfo.lua  EncounterJournal.lua  ItemData.lua  ModelInfo.lua  QuestData.lua  QuestLineData.lua  Sounds.lua  SpellData.lua  TransmogData.lua
Datamine/Settings/: ConsoleSettings.lua  DebugSettings.lua  SettingsCore.lua  SettingsTemplates.lua  SettingsTemplates.xml
Datamine_Data/: Database.lua  Datamine_Data.toc  Types.lua
Datamine_Maps/: Datamine_Maps.lua  Datamine_Maps.toc
Datamine_Maps/Generated_OLD/: Map_2147.lua  Map_2162.lua  Map_2175.lua  Map_2177.lua  Map_2178.lua  Map_2186.lua  Map_2187.lua  Map_2193.lua  Map_2195.lua  Map_2208.lua  Map_2209.lua  Map_2212.lua  Map_2214.lua  Map_2217.lua  Map_2222.lua  Map_2232.lua  Map_2233.lua  Map_2235.lua  Map_2237.lua  Map_2241.lua  Map_2245.lua  Map_2246.lua  Map_2257.lua  (+316 more)
Datamine_Names/: Datamine_Names.lua  Datamine_Names.toc
Datamine_Static/: Datamine_Static.lua  Datamine_Static.toc
Tools/: generate_item_bonuses.py  generate_maps.py  generate_names.py  test.py
(+71 files in other folders)
